<resources>
    <string name="app_name">Calculator</string>
    <string name="optDiv">\u00F7</string>
    <string name="optMul">\u00D7</string>
    <string name="optAdd">+</string>
    <string name="optSub">-</string>
    <string name="optDot">.</string>
    <string name="optEqual">=</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
</resources>
